--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -447,7 +447,7 @@ const currentUrl = Astro.url.href;
 				document.addEventListener('DOMContentLoaded', function() {
 					if (typeof emailjs !== 'undefined') {
 						emailjs.init({
-							publicKey: 'YOUR_PUBLIC_KEY', // Reemplaza con tu clave pública de EmailJS
+							publicKey: '9Xe-v_QhKUwP5YTto', // Tu clave pública de EmailJS
 							// No permitir navegadores sin interfaz
 							blockHeadless: true,
 							blockList: {
